[project]
name = "gas-bridger"
version = "0.1.0"
description = "Gas bridging contracts using LayerZero V2"
requires-python = ">=3.12"

dependencies = [
    "vyper==0.4.0",
    "web3>=0.7.8",
    "snekmate==0.1.0"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "titanoboa",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "gas_bridger/*.py",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["gas_bridger"]

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | contracts
  )/
)
'''
line-length = 120
target_version = ['py312']

[tool.isort]
profile = "black"
py_version = 312
line_length = 120

[tool.uv.sources]
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "b6baf252603c70531e26208c06172b8c82d36033" }
